fix modal behind the nav bar

--- a/public/css/mep.css
+++ b/public/css/mep.css
@@ -5,6 +5,10 @@
   box-sizing: border-box;
 }
 
+.modal-demo {
+  z-index: 1000;
+}
+
 .navbar-text {
   font-size: 15px;
 }
@@ -35,13 +39,13 @@
 }
 
 #ad_nav_bar {
-  z-index: 2000;
+  z-index: 800;
   background-color: rgb(0, 0, 255);
   border-color: rgb(0, 0, 255);
 }
 
 #su_nav_bar {
-  z-index: 2000;
+  z-index: 800;
   background-color: #20B2AA;
   border-color: #20B2AA;
 }
@@ -159,14 +163,14 @@
     left:0;
     width:100%;
     height:100%;
-    z-index:1000;
+    z-index:600;
     background-color:grey;
     opacity: .8;
  }
 
 .ajax-loader {
   position: fixed;
-  z-index: 999;
+  z-index: 500;
   height: 10em;
   width: 10em;
   overflow: show;
